# VCS-1

./: LICENSE.md  README.md  directorySctructure.md  push.sh  vivado.jou  vivado_10409.backup.jou  vivado_21490.backup.jou  vivado_7311.backup.jou  vivado_9215.backup.jou  vivado_pid25312.str
Documents/: README.md
Hardware/: README.md
Hardware/SD_BOOT/: README.md
Hardware/SD_BOOT/2017.4/: README.md
Hardware/SD_BOOT/2023.2/: output.bif
Hardware/SD_BOOT/TE820_4CG_HDMI/: zynqmp_fsbl.elf
Hardware/Xilinx/: README.md
Hardware/Xilinx/BoardFiles/: README.md
Hardware/Xilinx/Firmware/: README.md  vivado.jou
Software/ARM_NN/: LICENSE.md  README.md  installNNVCS-1.sh  push.sh
Software/EMC2_HDMI_out_191/: Makefile  hdmi_out  hdmi_out.cpp
Software/FM191_SDK/: README.md
Software/FM191_standalone/: FM191.cpp  FM191.hpp  Makefile  README.md  eeprom.cpp  eeprom.hpp  emc2-vs1  emc2-vs1.cpp  gpio.cpp  gpio.hpp  pwm.cpp  pwm.hpp  spi.cpp  spi.hpp  uart.cpp  uart.hpp
Software/FSBL/: readme.txt  readme.txt.bak
Software/Image_processing/: README.md
Software/Image_processing/demos/yolo3_cpp/: CMakeLists.txt  README.md
Software/Image_processing/demos/yolo3_cpp/src/: classifyObjects_64.cpp  classifyObjects_arm.cpp
Software/RealSense2/: readme.md  realsense_setup.sh
Software/Scripts/: README.md  captuteImageOpenCV.sh  classifyObjects.py  d435.py  directorySctructure.md  install_opencv4-0-1.sh  install_opencv4-0-1_VCS-1.sh
Software/VCS-1_SDK/: README.md
Software/VCS-1_emc2_ros/: LICENSE.txt  README.md
Software/VS-2_prototype/: README.md
(+1331 files in other folders)
